2004-05-23  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-auto-center-summary): Change default to 2.

	* assistant.el (wid-edit): Fix compilation.

	* gnus-util.el (gnus-set-file-modes): Just ignore errors. 

2004-05-23  Paul Stodghill  <stodghil@cs.cornell.edu>

	* gnus-util.el (gnus-set-file-modes): New function.  (small
	patch). 

2004-05-23  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-topic.el (gnus-topic-jump-to-topic): Goto missing topic.

	* assistant.el (assistant-render-node): Fix up rendering and
	read-only text. 
	(assistant-render-node): Reset.
	(assistant-make-read-only): Not sticky.

2004-05-20  Danny Siu  <dsiu@adobe.com>

        * gnus-sum.el (gnus-summary-recenter): Summery buffer was not auto
	centered even when gnus-auto-center-summary is t

2004-05-22  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* dns.el (dns-get-txt-answer): New function.
	(dns-read-txt): Ditto.
	(query-dns): Use it.

2004-05-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-start.el (gnus-get-unread-articles): Don't invalidate
	active for foreign groups even if the group level is higher than
	the specified value.

2004-05-21  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-group.el (gnus-group-jump-to-group): Don't prompt for
	non-active groups.

	* gnus-art.el (gnus-picon-databases): Add /usr/share/picons.

2004-05-20  Magnus Henoch  <mange@freemail.hu>

	* dns.el (dns-read-type): Add support for SVR.  (small patch)

2004-05-20  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (spam-use-crm114, spam-crm114, spam-crm114-program)
	(spam-crm114-header, spam-crm114-spam-switch)
	(spam-crm114-spam-strong-switch, spam-crm114-ham-strong-switch)
	(spam-crm114-positive-spam-header)
	(spam-crm114-database-directory, spam-list-of-processors)
	(spam-group-spam-processor-crm114-p)
	(spam-group-ham-processor-crm114-p, spam-extra-header-to-number)
	(spam-generic-score, spam-list-of-checks)
	(spam-list-of-statistical-checks, spam-registration-functions)